more content; links to wiki and github; trying to get alignment correct

--- a/tex2speech/static/main.css
+++ b/tex2speech/static/main.css
@@ -4,6 +4,7 @@
 
 * {
     padding: 0;
+    padding-left: 0;
     margin: 0;
     font-family: 'Lato', sans-serif;
 }
